2007-06-29  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControl.cs, TabItem.cs: Added handling for some strange cases.

2007-06-28  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControl.cs, TabItem.cs: More work.

2007-06-28  George Giolfan  <georgegiolfan@yahoo.com>

	* ListBox.cs, ListBoxItem.cs: More work.

2007-06-28  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControl.cs: Added a disabled partial fix.

2007-06-28  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControl.cs: The handler for ItemContainerGenerator.StatusChanged is now added where it is supposed to.

2007-06-27  George Giolfan  <georgegiolfan@yahoo.com>

	* ListBoxItem.cs: Some work.

2007-06-27  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Children in autosized rows/columns are now measured first. Star sizing in the measure pass is now computed after each measurement.

2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>

	* ListBox.cs, ListBoxItem.cs: Added.

2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>

	* Label.cs: Cleaned the code a little.

2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>

	* Panel.cs: Refactored Children.

2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Removed some unused variables.

2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Extended previous fix to MeasureOverride.

2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Fixed previous fix.

2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Removed an unused variable.

2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Fixed previous fix.

2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Fixed star sizing when the row/column size would not be between its minimum and maximum.

2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Minor refactoring.

2007-06-26  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Fixed grid lines rendering.
