@@ -1,5 +1,9 @@
 2007-06-29  George Giolfan  <georgegiolfan@yahoo.com>
 
+	* ListBoxItem.cs: Refactored some common code.
+
+2007-06-29  George Giolfan  <georgegiolfan@yahoo.com>
+
 	* TabControl.cs, TabItem.cs: Added handling for some strange cases.
 
 2007-06-28  George Giolfan  <georgegiolfan@yahoo.com>
